--- a/Track the Trackers/style.css
+++ b/Track the Trackers/style.css
@@ -1,106 +1,111 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
-
-body {
-    font-family: "Lato", sans-serif;
-    font-style: normal;
-    width: 400px;
-    min-height: 200px;
-}
-
-.trackers {
-    margin: 5px;
-}
-
-.trackers-history {
-    justify-content: center;
-    text-align: center;
-    font-family: 'Calibri';
-}
-
-ul{
-    list-style-type: none;
-}
-
-.show {
-    display: block;
-}
-
-.displayItems {
-    display: none;
-}
-
-.zoom_history_content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 80%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-    font-family: 'Calibri';
-}
-
-
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-
-.active,
-.accordion:hover {
-    background-color: #ccc;
-}
-
-
-/* Style the accordion panel. Note: hidden by default */
-
-.panel {
-    padding: 0 18px;
-    background-color: white;
-    display: none;
-    overflow: hidden;
-}
-
-.accordion:after {
-    content: '\02795';
-    /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
-    color: #777;
-    float: right;
-    margin-left: 5px;
-    font-family: 'Calibri';
-}
-
-.active:after {
-    content: "\2796";
-    /* Unicode character for "minus" sign (-) */
-}
-
-.mainTitle {
-    font-family: 'Calibri';
-    text-align: 'center';
-    align-items: center;
-    justify-content: center;
-    font-size: 30px;
-    font-weight: 'bold';
-}
-
-.subTitle {
-    font-family: 'Calibri';
-    text-align: 'center';
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: 'bold';
-}
+ #wrapper {
+     margin: 0px;
+     padding: 0px;
+     background-color: #eee;
+ }
+ 
+ body {
+     font-family: 'Calibri';
+     font-style: normal;
+     width: 400px;
+     min-height: 250px;
+ }
+ 
+ .trackers {
+     margin: 5px;
+     font-weight: 100;
+ }
+ 
+ .trackers-history {
+     justify-content: center;
+     text-align: center;
+     font-family: 'Calibri';
+ }
+ 
+ ul {
+     list-style-type: none;
+ }
+ 
+ .show {
+     display: block;
+ }
+ 
+ .displayItems {
+     display: none;
+ }
+ 
+ .accordion {
+     background-color: #dcdcdc;
+     color: #444;
+     cursor: pointer;
+     padding: 18px;
+     width: 90%;
+     text-align: left;
+     border: none;
+     border-radius: 25px;
+     outline: none;
+     transition: 0.4s;
+     font-family: 'Calibri';
+     margin-bottom: 5px;
+ }
+ /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+ 
+ .active,
+ .accordion:hover {
+     background-color: #ccc;
+ }
+ /* Style the accordion panel. Note: hidden by default */
+ 
+ .panel {
+     padding: 0 18px;
+     background-color: dcdcdc;
+     display: none;
+     overflow: hidden;
+ }
+ 
+ .accordion:after {
+     content: '\02795';
+     /* Unicode character for "plus" sign (+) */
+     font-size: 13px;
+     color: #777;
+     float: right;
+     margin-left: 5px;
+     font-family: 'Calibri';
+ }
+ 
+ .active:after {
+     content: "\2796";
+     /* Unicode character for "minus" sign (-) */
+ }
+ 
+ .mainTitle {
+     margin-top: 3%;
+     margin-left: 22%;
+     width: 100%;
+     font-family: 'Calibri';
+     text-align: 'center';
+     /* align-items: center; */
+     /* justify-content: center; */
+     font-size: 30px;
+     font-weight: 'bold';
+ }
+ 
+ .subTitle {
+     margin-left: 28%;
+     font-family: 'Calibri';
+     text-align: 'center';
+     align-items: center;
+     justify-content: center;
+     font-size: 20px;
+     font-weight: 'bold';
+ }
+ 
+ .subTitle1 {
+     margin-left: 22%;
+     font-family: 'Calibri';
+     text-align: 'center';
+     align-items: center;
+     justify-content: center;
+     font-size: 20px;
+     font-weight: 'bold';
+ }
